--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,32 @@
+name: saas
 version: '3.7'
 services:
   db:
+    container_name: saas_postgres
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_PASSWORD: payment_pass
-      POSTGRES_USER: payment_user
-      POSTGRES_DB: payment
+      POSTGRES_PASSWORD: saas_pass
+      POSTGRES_USER: saas_user
+      POSTGRES_DB: saas
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
     ports:
       - '5432:5432'
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U payment_user -d payment"]
+      test: ["CMD-SHELL", "pg_isready -U saas_user -d saas"]
       interval: 30s
       timeout: 10s
       retries: 3
 
   # Backend API
   api:
+    container_name: saas_api
     build: .
     ports:
       - '8000:8000'
     environment:
-      - DATABASE_URL=postgresql://payment_user:payment_pass@db:5432/payment
+      - DATABASE_URL=postgresql://saas_user:saas_pass@db:5432/saas
       - NODE_ENV=development
     depends_on:
       db:
